= ludy changes history

== ludy 0.1.10, 2008.02.07

* fixed an offset bug in paginator. if the offset was equal to the count,
  there should be no page existed.
* fixed and updated rdoc presentation
* fixed a warning of shadowing variables in ruby 1.9

* added the offset test in test_paginator
* make some Kernel method private

== ludy 0.1.9, 2008.02.07

* fixed a bug in RailsPaginator, which ignored opts for count.
* fixed a possible bug in puzzle_generator... (not happened before?)
* fixed a stupid timeout message bug...

* added multiruby test (from ZenTest) with ruby 1.8.6-p111, 1.9.0-0, svn trunk
* added Array#head, Array#choice!, Array#count
* added Array#product, which came from ruby 1.9 (implemented by combos in ruby 1.8)
* added Kernel#deep_copy, by Marshal idiom
* added Hash#reverse_merge
* added a simple and stupid timer........

* removed Array#reverse_map, use reverse.map instead
* renamed test_helper to helper

* puzzle_generator was never always dependent on facets now!
* ludy was never always dependent on rake now!

* change my nickname to binary string... for ruby-svn
* updated tasks from bones 1.3.2
* better Rakefile support, with version automatic extraction from README and
  better way to display tasks for default task. (no sh 'rake --tasks' now)
* rake clean now clean out the *.rbc for rubinius
* Array#rotate is re-implemented.

== ludy 0.1.8, 2008.01.31

* change the way displaying debug message

== ludy 0.1.7, 2008.01.31

* added preprocess_cpp tools, debug_hook and debug_include

== ludy 0.1.6, 2008.01.31

* make erubis don't trim...

== ludy 0.1.5, 2008.01.31

* fixed task preprocess:erubis presentation error.

== ludy 0.1.4, 2008.01.31

* added Page#begin and Page#end for real index in the data
* added Paginator#count for counter.call wrapper

* rename from Ludy::eout to Ludy::erbout
* added erubis support
* rename task from erb:preprocess to preprocess:erb and preprocess:erubis
* task preprocess would preprocess with erb and erubis