@@ -17,3 +17,5 @@
 
 * refactor tasks...
 * make switch between template engine easier
+
+* rails paginator, change model class, change opts...
